# sockjs-client

./: README.rst  pyproject.toml
examples/: client.py  server.py
sockjs_client/: __init__.py  connect.py  xhrstreaming.py
tests/: test_sockjs_client.py
