[tool.poetry]
name = "sockjs-client"
version = "0.1.0"
description = ""
authors = ["Gabriele Alese <gabriele@alese.it>"]

[tool.poetry.dependencies]
python = "^3.7.4"
tornado = "5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sockjs-tornado = "^1.0.6"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
